--- a/XAUATthesis.cfg
+++ b/XAUATthesis.cfg
@@ -63,7 +63,7 @@
         \fi
     \fi
 \fi
-\newcommand{\XAUAT@publishtext}{本人授权中国学术期刊（光盘版）杂志社、中国科学技术信息研究所、万方数据电子出版社等单位将本学位论文收录到有关“学位论文数据库”之中，并通过网络向社会公众提供信息服务。\\ \XAUAT@checktext \hspace*{2em}（此声明不勾选的，默认为即时公开）}
+\newcommand{\XAUAT@publishtext}{本人授权中国学术期刊（光盘版）杂志社、中国科学技术信息研究所、万方数据电子出版社等单位将本学位论文收录到有关“学位论文数据库”之中，并通过网络向社会公众提供信息服务。\\ \XAUAT@checktext（此声明不勾选的，默认为即时公开）}
 
 \newcommand{\cabstractname}{摘{\hspace{2em}}要}
 \newcommand{\eabstractname}{ABSTRACT}
