--- a/XAUATthesis.cfg
+++ b/XAUATthesis.cfg
@@ -10,8 +10,6 @@
     indexname=索引,
     appendixname=附录,
 }
-%\newcommand{\XAUAT@figurename}{图}
-%\newcommand{\XAUAT@tablename}{表}
 
 \newcommand{\XAUAT@classification}{分类号\hspace*{0.5em}}
 \newcommand{\XAUAT@cstudentnumbertitle}{学\hspace{1em}号\hspace*{0.5em}}
@@ -68,6 +66,8 @@
 \newcommand{\cabstractname}{摘{\hspace{2em}}要}
 \newcommand{\eabstractname}{ABSTRACT}
 \newcommand{\XAUAT@ckeywords@title}{关键词：}
+\newcommand{\XAUAT@ckeywords@separator}{，}
+\newcommand{\XAUAT@ekeywords@separator}{,}
 \newcommand{\XAUAT@denotation@name}{主要符号对照表}
 \newcommand{\XAUAT@ackname}{致{\hspace{2em}}谢}
 \newcommand\listequationname{公式索引}
