--- a/XAUATthesis.cfg
+++ b/XAUATthesis.cfg
@@ -1,6 +1,6 @@
 \ProvidesFile{XAUATthesis.cfg}[2020/08/10 v1.0.0 Beta Xi'an University of Architecture and Technology Thesis Template]
 \ctexset{%
-    chapter/name={,},
+    chapter/name={第,章},
     contentsname={目{\hspace{2em}}录},
     listfigurename=插图索引,
     listtablename=表格索引,
@@ -11,25 +11,35 @@
     appendixname=附录,
 }
 
-\newcommand{\XAUAT@classification}{分类号\hspace*{0.5em}}
-\newcommand{\XAUAT@cstudentnumbertitle}{学\hspace{1em}号\hspace*{0.5em}}
+\newcommand{\XAUAT@classification}{分类号：} % \hspace*{0.5em}
 \newcommand{\XAUAT@cschoolname}{西安建筑科技大学}
+% \newcommand{\XAUAT@cschoolname}{}
 \newcommand{\XAUAT@eschoolname}{Xi\textquotesingle an University of Architecture and Technology}
-\newcommand{\XAUAT@thesistitle}{学\hspace*{0.5em}位\hspace*{0.5em}论\hspace*{0.5em}文}
-\newcommand{\XAUAT@cauthortitle}{作\hspace{\fill}者\hspace*{0.5em}}
-\newcommand{\XAUAT@csupervisortitle}{指导教师姓名\hspace*{0.5em}}
-\newcommand{\XAUAT@cdegreetitle}{申请学位级别\hspace*{0.5em}}
-\newcommand{\XAUAT@csubmitdatetitle}{论文提交日期\hspace*{0.5em}}
-\newcommand{\XAUAT@cmajortitle}{专\hspace{\fill}业\hspace{\fill}名\hspace{\fill}称\hspace*{0.5em}}
-\newcommand{\XAUAT@cdefencedatetitle}{论文答辩日期\hspace*{0.5em}}
-\newcommand{\XAUAT@cschoolnametitle}{学位授予单位\hspace*{0.5em}}
-\newcommand{\XAUAT@defensecommittee}{答辩委员会主席\hspace*{0.5em}}
-\newcommand{\XAUAT@reviews}{评\hspace{\fill}阅\hspace{\fill}人\hspace*{0.5em}}
+\newcommand{\XAUAT@cauthortitle}{作者姓名}
+\newcommand{\XAUAT@cstudentnumbertitle}{学号}
+\newcommand{\XAUAT@cdepartmenttitle}{所在学院}
+\newcommand{\XAUAT@cmajortypetitle}{学科名称}%类别（领域）
+\newcommand{\XAUAT@csupervisortitle}{指导教师}
+\newcommand{\XAUAT@cdefencedatetitle}{答辩日期}
+
+\newcommand{\XAUAT@committee}{学位论文答辩委员会}
+\newcommand{\XAUAT@defenceAuthorTitle}{答辩人姓名}
+\newcommand{\XAUAT@defenceTimeTitle}{答辩时间}
+\newcommand{\XAUAT@defenceCommitteeTitle}{答辩委员会}
+\newcommand{\XAUAT@committeeNameTitle}{姓\hspace{2em}名}
+\newcommand{\XAUAT@committeeTitleTitle}{职\hspace{2em}称}
+\newcommand{\XAUAT@committeeOrgTitle}{工作单位}
+\newcommand{\XAUAT@committeeCChairTitle}{主\hspace{2em}席}
+\newcommand{\XAUAT@committeeTitle}{委\hspace{2em}员}
+
+\newcommand{\XAUAT@declaration}{声\hspace*{2em}明}
+
 
 \newcommand{\XAUAT@capply}{\XAUAT@cdegree 学位论文}
 \newcommand{\XAUAT@eapply}{A dissertation submitted to\\
-    \XAUAT@eschoolname \\
-    in conformity with the requirements for the degree of}
+Xi’an University of Architecture and Technology\\
+in partial fulfillment of the requirements\\
+for the degree of}
 
 \ifXAUAT@doctor
     \cdegree{博士}
@@ -41,39 +51,53 @@
     \fi
 \fi
 
-\newcommand{\XAUAT@declarationtitle}{声明}
-\newcommand{\XAUAT@declarationtext}{\hspace*{2em}本人郑重声明我所呈交的学位论文是我个人在导师指导下进行的研究工作及取得的研究成果。尽我所知，除了文中已标明引用的内容外，本论文不包含其他个人或集体已经发表或撰写过的研究成果，也不包含本人或其他人在其他单位已申请学位或为其他用途使过的成果。与我一同工作的同志对本研究所做的所有贡献均已在论文中作了明确的说明并表示了致谢。\\\hspace*{2em}申请学位论文与资料若有不实之处，本人承担一切相关责任。}
+\ifXAUAT@academic
+    \cdegreetype{学术学位}
+    \edegreetype{Academic degree}
+\else
+    \ifXAUAT@engineering
+        \cdegreetype{专业学位}
+        \edegreetype{Engineering degree}
+    \fi
+\fi
+
+\newcommand{\XAUAT@declarationtitle}{学位论文独创性声明}
+\newcommand{\XAUAT@declarationtext}{\hspace*{2em}本人郑重声明：所呈交的学位论文系在指导教师或指导教师团队指导下本人独立完成的研究成果。尽我所知，除论文中明确注明引用的内容外，论文内容不包含其他个人或集体完成或已发表的研究成果，也不包含本人或其他人已用于其他学位申请的论文和成果。对论文的研究工作做出重要贡献的个人和集体，均已在论文中作了明确的说明并已致谢。\\\hspace*{2em}申请学位论文及其相关资料若有不实之处，本人承担一切相关责任。}
 \newcommand{\XAUAT@authorsignaturetitle}{论文作者签名：}
-\newcommand{\XAUAT@datetitle}{日期：}
-\newcommand{\XAUAT@authorization}{关于学位论文使用授权的说明}
-\newcommand{\XAUAT@authorizationtext}{本人完全了解西安建筑科技大学有关保留、使用学位论文的规定，即：学校有权保留并向国家有关部门或机构送交学位论文的复印件和电子版，允许论文被查阅和借阅；学校可以公布学位论文的全部或部分内容，可以采用影印、缩印或者其他复制手段保存学位论文。\\\hspace*{2em}（保密的论文在论文解密后应遵守此规定）}
-\newcommand{\XAUAT@supervisorsignature}{指导教师签名：}
+\newcommand{\XAUAT@datetitle}{日期：\hspace{4em}年\hspace{2em}月\hspace{2em}日}
+\newcommand{\XAUAT@authorization}{学位论文知识产权声明}
 \ifXAUAT@none
-    \newcommand{\XAUAT@checktext}{因某种特殊原因需要延迟发布论文电子版，同意在$\Box$一年/$\Box$两年/$\Box$三年以后，在网络上全文发布。}
+    \newcommand{\XAUAT@checktext}{$\Box$一年/$\Box$两年/$\Box$三年}
 \else
     \ifXAUAT@one
-        \newcommand{\XAUAT@checktext}{因某种特殊原因需要延迟发布论文电子版，同意在$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$一年/$\Box$两年/$\Box$三年以后，在网络上全文发布。}
+        \newcommand{\XAUAT@checktext}{$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$一年/$\Box$两年/$\Box$三年}
     \else
         \ifXAUAT@two
-            \newcommand{\XAUAT@checktext}{因某种特殊原因需要延迟发布论文电子版，同意在$\Box$一年/$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$两年/$\Box$三年以后，在网络上全文发布。}
+            \newcommand{\XAUAT@checktext}{$\Box$一年/$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$两年/$\Box$三年}
         \else
-            \newcommand{\XAUAT@checktext}{因某种特殊原因需要延迟发布论文电子版，同意在$\Box$一年/$\Box$两年/$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$三年以后，在网络上全文发布。}
+            \newcommand{\XAUAT@checktext}{$\Box$一年/$\Box$两年/$\makebox[0pt][l]{$\square$}\raisebox{.15ex}{\hspace{0.1em}$\checkmark$}$三年}
         \fi
     \fi
 \fi
-\newcommand{\XAUAT@publishtext}{本人授权中国学术期刊（光盘版）杂志社、中国科学技术信息研究所、万方数据电子出版社等单位将本学位论文收录到有关“学位论文数据库”之中，并通过网络向社会公众提供信息服务。\\ \XAUAT@checktext（此声明不勾选的，默认为即时公开）}
+\newcommand{\XAUAT@authorizationtext}{我们所提交的学位论文及相关的职务作品是在西安建筑科技大学攻读学位期间完成的成果，知识产权归属西安建筑科技大学。论文作者离校后，或学位论文指导教师离职后，发表、使用学位论文或与该论文直接相关的学术论文或成果时，署名单位仍然为西安建筑科技大学。
+\\\hspace*{2em}我们完全了解学校有关保存、使用学位论文的规定，即：学校有权保留并向国家有关部门或机构送交学位论文的复印件和电子文档，可以采用影印、缩印或者其他复制手段保存和汇编学位论文，允许本论文被查阅和借阅，学校可以公布论文的全部或部分内容，可在\XAUAT@checktext（此处未勾选的，默认为即时公开）以后授权中国学术期刊（光盘版）电子杂志社、中国科学技术信息研究所等单位将本学位论文全部内容收录到有关“学位论文数据库”之中，在网络上全文发布并通过网络向社会公众提供信息服务。保密论文在保密期内遵守有关保密规定，解密后适用于此声明。}
+\newcommand{\XAUAT@supervisorsignature}{指导教师签名：}
 
+\newcommand{\XAUAT@cdegreetype@title}{学位类型}
+\newcommand{\XAUAT@edegreetype@title}{Type of Degree}
 \newcommand{\cabstractname}{摘{\hspace{2em}}要}
 \newcommand{\eabstractname}{ABSTRACT}
 \newcommand{\XAUAT@ckeywords@title}{关键词：}
-\newcommand{\XAUAT@ckeywords@separator}{，}
-\newcommand{\XAUAT@ekeywords@separator}{,}
+\newcommand{\XAUAT@cthesistype@title}{论文类型：}
+\newcommand{\XAUAT@ethesistype@title}{Type of Dissertation：}
+\newcommand{\XAUAT@ckeywords@separator}{；}
+\newcommand{\XAUAT@ekeywords@separator}{;}
 \newcommand{\XAUAT@denotation@name}{主要符号对照表}
 \newcommand{\XAUAT@ackname}{致{\hspace{2em}}谢}
 \newcommand\listequationname{公式索引}
 \newcommand\equationname{公式}
 \newcommand{\XAUAT@resume@title}{个人简历、在学期间发表的学术论文与研究成果}
-\newcommand{\XAUAT@cmajorname}{专{\hspace{2em}}业}
+\newcommand{\XAUAT@cmajorname}{学科专业}
 \newcommand{\XAUAT@cstudenttitle}{\XAUAT@cdegree 生}
 \newcommand{\XAUAT@csupervisorname}{指导教师}
 \newcommand{\XAUAT@emajorname}{Specialty}
