--- a/XAUATthesis.cfg
+++ b/XAUATthesis.cfg
@@ -18,7 +18,7 @@
 \newcommand{\XAUAT@cauthortitle}{作者姓名}
 \newcommand{\XAUAT@cstudentnumbertitle}{学号}
 \newcommand{\XAUAT@cdepartmenttitle}{所在学院}
-\newcommand{\XAUAT@cmajortypetitle}{学科名称}%类别（领域）
+% \newcommand{\XAUAT@cmajortypetitle}{学科名称}%类别（领域）
 \newcommand{\XAUAT@csupervisortitle}{指导教师}
 \newcommand{\XAUAT@cdefencedatetitle}{答辩日期}
 
@@ -27,6 +27,7 @@
 \newcommand{\XAUAT@defenceTimeTitle}{答辩时间}
 \newcommand{\XAUAT@defenceCommitteeTitle}{答辩委员会}
 \newcommand{\XAUAT@committeeNameTitle}{姓\hspace{2em}名}
+\newcommand{\XAUAT@committeeNameTitleBrief}{姓名}
 \newcommand{\XAUAT@committeeTitleTitle}{职\hspace{2em}称}
 \newcommand{\XAUAT@committeeOrgTitle}{工作单位}
 \newcommand{\XAUAT@committeeCChairTitle}{主\hspace{2em}席}
@@ -43,21 +44,27 @@ for the degree of}
 
 \ifXAUAT@doctor
     \cdegree{博士}
+    \cdegreebrief{博}
     \edegree{Doctor of Philosophy}
 \else
     \ifXAUAT@master
         \cdegree{硕士}
+        \cdegreebrief{硕}
         \edegree{Master of Science}
     \fi
 \fi
 
 \ifXAUAT@academic
     \cdegreetype{学术学位}
+    \cdegreetypebrief{学}
     \edegreetype{Academic degree}
+    \cmajortypetitle{学科名称}
 \else
     \ifXAUAT@engineering
         \cdegreetype{专业学位}
+        \cdegreetypebrief{专}
         \edegreetype{Engineering degree}
+        \cmajortypetitle{类别(领域)}
     \fi
 \fi
 
@@ -103,3 +110,5 @@ for the degree of}
 \newcommand{\XAUAT@emajorname}{Specialty}
 \newcommand{\XAUAT@estudenttitle}{Author}
 \newcommand{\XAUAT@esupervisorname}{Supervisor}
+
+\newcommand{\XAUAT@dissertation@title}{论文题目}
